feature: migrating to angular 17

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,9 +1,7 @@
-<ng-container *ngIf="isAuthLoading$ | async; else router">
+@if (isAuthLoading$ | async) {
 	<div class="auth-loading">
 		<p>KAITEKI</p>
 	</div>
-</ng-container>
-
-<ng-template #router>
+} @else {
 	<router-outlet></router-outlet>
-</ng-template>
+}
