--- a/frontend/src/app/integrations/submodules/spotify/pages/spotify-dashboard/components/dashboard-playlist-item/dashboard-playlist-item.component.html
+++ b/frontend/src/app/integrations/submodules/spotify/pages/spotify-dashboard/components/dashboard-playlist-item/dashboard-playlist-item.component.html
@@ -6,6 +6,7 @@
 		<img
 			class="spotify-playlists__list-item-img"
 			[src]="playlist.images[0].url"
+			[alt]="playlist.name"
 			loading="lazy"
 		/>
 		<h4 class="spotify-playlists__list-item-title">
