--- a/frontend/src/app/shared/layouts/primary-layout/components/sub-menu/sub-menu.component.html
+++ b/frontend/src/app/shared/layouts/primary-layout/components/sub-menu/sub-menu.component.html
@@ -1,4 +1,4 @@
-<div
+<button
 	class="menu"
 	[class.active]="active"
 	[class.collapsed-menu]="collapsed"
@@ -39,7 +39,7 @@
 			expand_more
 		</mat-icon>
 	</button>
-</div>
+</button>
 
 <ng-container *ngIf="expanded">
 	<div
