--- a/frontend/src/app/teams/submodules/meetings/components/views/meetings-list-view/components/meeting-list-item/meeting-list-item.component.html
+++ b/frontend/src/app/teams/submodules/meetings/components/views/meetings-list-view/components/meeting-list-item/meeting-list-item.component.html
@@ -1,4 +1,4 @@
-<div
+<button
 	*ngIf="meeting"
 	class="meetings__item"
 	(click)="onSelectMeeting(meeting)"
@@ -13,4 +13,4 @@
 			{{ meeting.start | date: 'MMM d, h:mm a' }}
 		</p>
 	</div>
-</div>
+</button>
