--- a/frontend/src/app/teams/submodules/meetings/pages/meeting-room/meeting-room.component.html
+++ b/frontend/src/app/teams/submodules/meetings/pages/meeting-room/meeting-room.component.html
@@ -104,15 +104,35 @@
 
 	<div class="meeting-room__right">
 		<div class="meeting-room__participants">
-			<h4 class="meeting-room__participants -title">Participants</h4>
-			<div class="meeting-room__participants -list">
-				<div class="meeting-room__participants -item">
-					<div class="meeting-room__participants -item-avatar"></div>
-					<p class="meeting-room__participants -item-name">Daffa Ganteg</p>
+			<h4 class="meeting-room__participants-title">Participants</h4>
+			<div class="meeting-room__participants-list">
+				<div class="meeting-room__participants-item">
+					<img
+						class="meeting-room__participants-item-avatar"
+						alt="Daffa Ganteg"
+					/>
+					<p class="meeting-room__participants-item-name">Daffa Ganteg</p>
 				</div>
-				<div class="meeting-room__participants -item">
-					<div class="meeting-room__participants -item-avatar"></div>
-					<p class="meeting-room__participants -item-name">Albert Houstan</p>
+				<div class="meeting-room__participants-item">
+					<img
+						class="meeting-room__participants-item-avatar"
+						alt="Daffa Ganteg"
+					/>
+					<p class="meeting-room__participants-item-name">Albert</p>
+				</div>
+				<div class="meeting-room__participants-item">
+					<img
+						class="meeting-room__participants-item-avatar"
+						alt="Daffa Ganteg"
+					/>
+					<p class="meeting-room__participants-item-name">Albert</p>
+				</div>
+				<div class="meeting-room__participants-item">
+					<img
+						class="meeting-room__participants-item-avatar"
+						alt="Daffa Ganteg"
+					/>
+					<p class="meeting-room__participants-item-name">Albert</p>
 				</div>
 			</div>
 		</div>
