--- a/frontend/src/app/teams/submodules/tasks/components/dialogs/customize-dialog/components/customize-status-item/customize-status-item.component.html
+++ b/frontend/src/app/teams/submodules/tasks/components/dialogs/customize-dialog/components/customize-status-item/customize-status-item.component.html
@@ -47,7 +47,9 @@
 			mat-menu-item
 			[ngStyle]="{ background: color.hexCode }"
 			(click)="onSelectColor($event, color.hexCode)"
-		></button>
+		>
+			#{{ color.hexCode }}
+		</button>
 	</ng-container>
 </mat-menu>
 
