--- a/frontend/src/app/integrations/submodules/spotify/components/spotify-player/spotify-player.component.scss
+++ b/frontend/src/app/integrations/submodules/spotify/components/spotify-player/spotify-player.component.scss
@@ -62,7 +62,7 @@
 			}
 
 			&-move {
-				color: #bbbbbb;
+				color: #e9e9e9;
 
 				mat-icon {
 					width: 28px;
@@ -106,6 +106,14 @@
 
 			@media screen and (max-width: $sm) {
 				display: none;
+			}
+		}
+
+		&-player {
+			display: none;
+
+			@media screen and (max-width: $sm) {
+				display: block;
 			}
 		}
 	}
