--- a/frontend/src/app/shared/layouts/primary-layout/components/sidebar/sidebar.component.scss
+++ b/frontend/src/app/shared/layouts/primary-layout/components/sidebar/sidebar.component.scss
@@ -21,7 +21,7 @@
 		color: #a3a3a3;
 		padding: 8px 10px;
 		border-radius: 8px;
-		border: 1px dashed #a3a3a3;
+		border: 1px solid #a3a3a3;
 		display: flex;
 		justify-content: center;
 		align-items: center;
@@ -39,14 +39,6 @@
 	}
 
 	&__logo {
-		// font-family: "Sarpanch", sans-serif;
-		// text-transform: uppercase;
-		// font-weight: bold;
-		// font-size: 1.125rem;
-		// padding: 0 20px;
-		// cursor: pointer;
-		// color: #f9fafe;
-
 		&-wrapper {
 			display: flex;
 			padding: 0 14px;
