--- a/frontend/src/app/shared/layouts/primary-layout/primary-layout.component.scss
+++ b/frontend/src/app/shared/layouts/primary-layout/primary-layout.component.scss
@@ -8,7 +8,7 @@
 	font-family: $primary-ff, sans-serif;
 	font-size: $text-sm;
 	color: $text-black;
-	background: $background-light;
+	background: #fff;
 	position: relative;
 }
 
@@ -19,7 +19,7 @@
 }
 
 .content {
-	height: calc(100vh - 80px);
+	height: calc(100vh - 66px);
 	overflow-x: hidden;
 	overflow-y: auto;
 }
