--- a/frontend/src/app/teams/components/navbar/navbar.component.html
+++ b/frontend/src/app/teams/components/navbar/navbar.component.html
@@ -2,18 +2,18 @@
 	mat-tab-nav-bar
 	mat-align-tabs="start"
 	mat-stretch-tabs="false"
-	class="wrapper"
+	class="teams-sidebar__wrapper"
 	[tabPanel]="tabPanel"
 >
 	<ng-container *ngFor="let tab of tabs">
 		<a
 			mat-tab-link
 			[routerLink]="tab.link"
-			[routerLinkActive]="['item-active']"
+			[routerLinkActive]="['teams-sidebar__item-active']"
 		>
-			<div class="item">
-				<mat-icon class="item-icon">{{ tab.icon }}</mat-icon>
-				<p class="item-label">{{ tab.label }}</p>
+			<div class="teams-sidebar__item">
+				<mat-icon class="teams-sidebar__item-icon">{{ tab.icon }}</mat-icon>
+				<p class="teams-sidebar__item-label">{{ tab.label }}</p>
 			</div>
 		</a>
 	</ng-container>
