--- a/frontend/src/app/teams/submodules/meetings/components/views/meetings-list-view/components/meeting-list-item/meeting-list-item.component.scss
+++ b/frontend/src/app/teams/submodules/meetings/components/views/meetings-list-view/components/meeting-list-item/meeting-list-item.component.scss
@@ -2,12 +2,15 @@
 
 .meetings {
 	&__item {
-		height: fit-content;
+		text-align: left;
+		width: 100%;
+		height: 100%;
 		padding: 12px 16px;
 		border-radius: 10px;
 		background: #ffffff;
 		border: 1px solid #e9e9e9;
 		cursor: pointer;
+		overflow: hidden;
 
 		&-active {
 			border: 1px solid $primary-light;
@@ -34,11 +37,19 @@
 			font-size: 14px;
 			font-weight: 500;
 			margin-bottom: 6px;
+
+			overflow: hidden;
+			text-overflow: ellipsis;
+			white-space: nowrap;
 		}
 
 		&-desc {
 			font-size: 12px;
 			color: #575757;
+
+			overflow: hidden;
+			text-overflow: ellipsis;
+			white-space: nowrap;
 		}
 
 		&-date {
